Initial Changes for fixing and debugging challenge mode round incrementation
Seems there might be an issue with how rounds are incremented during challenge mode, these changes are here to debug that issue putting battle state in the browser console directly.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -331,12 +331,11 @@
             <h6>Experience Gained</h6>
             <p class="h3"><span id="challenge-exp-gained">0</span> XP</p>
           </div>
-          <div class="mb-3">
-            <button id="start-challenge-btn" class="btn btn-primary">Start New Challenge</button>
-            <button id="continue-challenge-btn" class="btn btn-success">Continue Challenge</button>
-            <button id="collect-exp-btn" class="btn btn-warning d-none">Collect Experience</button>
-            <button id="reset-challenge-btn" class="btn btn-danger">Reset Challenge</button>
-          </div>
+<div class="mb-3">
+  <button id="challenge-btn" class="btn btn-primary">Challenge</button>
+  <button id="collect-exp-btn" class="btn btn-warning d-none">Collect Experience</button>
+  <button id="reset-challenge-btn" class="btn btn-danger">Reset Challenge</button>
+</div>
         </div>
         <div class="col-md-6">
           <div id="challenge-opponent-info" class="card border-danger">
