Adding Items to Challenge Mode
Enhanced Challenge mode so that the challengers incorporate equipment items in their GA

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -349,6 +349,10 @@
                 STR: 0 | AGI: 0 | STA: 0 | INT: 0 | WIS: 0
               </p>
             </div>
+          <div id="challenge-opponent-equipment" class="mt-2">
+          <h6 class="mb-1">Equipment</h6>
+          <div class="text-muted">No equipment</div>
+        </div>
           </div>
         </div>
       </div>
